syntax = "proto3";
option java_multiple_files = true;

package grpccinema;

message DTOCustomer
{
  string name = 1;
  string password = 2;
  string email = 3;
  int32 phone = 4;
}

message GetCustomersRequest
{
}

message GetCustomersResponse
{
  repeated DTOCustomer customers = 1;
}

message GetCustomerByPhoneRequest
{
  int32 phone = 1;
}

message GetCustomerByPhoneResponse
{
  DTOCustomer customer = 1;
}

message SaveCustomerRequest {
  DTOCustomer customer = 1;
}

message SaveCustomerResponse {
  DTOCustomer customer = 1;
}

message DTOHall{
  int32 id = 1;
  int32 number = 2;
  int32 layout = 3;

}

message GetHallsRequest{}

message GetHallsResponse{
  repeated DTOHall halls = 1;
}

message GetHallByIdRequest{
  int32 id = 1;
}

message GetHallByIdResponse{
  DTOHall hall = 1;
}

message DTOMovie{
  string title = 1;
  int32 playtime = 2;
  string genre = 3;
  string releaseDate = 4;
  int32 id = 5;
}

message GetMovieByIdRequest{
  int32 id = 1;
}
message GetMovieByIdResponse{
  DTOMovie movie = 1;
}

message GetAllMoviesRequest{}

message GetAllMoviesResponse{
  repeated DTOMovie movies = 1;
}

message DTOScreening{
  int32 id = 1;
  DTOMovie movie= 2;
  string startTime = 3;
  string date = 4;
  int32 hallId = 5;
  int32 availableSeats = 6;
}

message GetAllScreeningsRequest{}

message GetAllScreeningsResponse{
  repeated DTOScreening screenings = 1;
}
service CinemaService
{
  rpc GetCustomers (GetCustomersRequest) returns (GetCustomersResponse);
  rpc GetCustomerByPhone (GetCustomerByPhoneRequest) returns (GetCustomerByPhoneResponse);
  rpc SaveCustomer(SaveCustomerRequest) returns (SaveCustomerResponse);
  rpc GetHalls (GetHallsRequest) returns (GetHallsResponse);
  rpc GetHallByID (GetHallByIdRequest) returns (GetHallByIdResponse);
  rpc GetAllScreenings (GetAllScreeningsRequest) returns (GetAllScreeningsResponse);
  rpc GetMovieByID (GetMovieByIdRequest) returns (GetMovieByIdResponse);
  rpc GetAllMovies (GetAllMoviesRequest) returns (GetAllMoviesResponse);
}